--- a/Pixel Marine/藝童.html
+++ b/Pixel Marine/藝童.html
@@ -70,7 +70,7 @@
   <source src="影片檔案路徑.mp4" type="video/mp4">
   您的瀏覽器不支援 video 標籤。
  
-  <source src="/Users/haupanyeung/Desktop/Pixel Marine/Project 01-01_4K.mp4" type="video/mp4">
+  <source src="/Users/haupanyeung/Desktop/Pixel Marine/Project 01-01_SD 360p.mp4" type="video/mp4">
   您的瀏覽器不支援 video 標籤。
 </video>
   <p>歡迎來到 Pixel Marine 水族館！透過這學期的探索與研究，創建了這個獨特的水族館，
